tests/NormalTests/paczka1/fuzzy1/97594627.err
Error in line 8: S848 S915 770
Error in line 13: S848 S848 2,4
Error in line 16: S848 S915 74,0
Error in line 17: 7PquW S915 26,5
Error in line 30: kc3UTk1r A576 51,2
